--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -27,12 +27,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "pg": "^8.17.1"
   },
   "devDependencies": {
     "@anvara/config": "workspace:*",
     "@anvara/eslint-config": "workspace:*",
     "@anvara/prettier-config": "workspace:*",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "eslint": "^9.39.2",
     "prisma": "^7.2.0",
